issue Product Page is not opening, Flash message is not showing properly in cart page. fixed

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
@@ -1253,7 +1253,7 @@
 .main-container-wrapper {
     .sticky-header {
         top: 0px;
-        z-index: 1100;
+        z-index: 100;
         position: sticky;
         background: white;
 
